--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hsoub.js",
+  "name": "hsoub",
   "version": "0.0.1",
   "description": "Hsoub I/O API requests",
   "main": "hsoub.js",
