--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hsoub",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Hsoub I/O API requests",
   "main": "hsoub.js",
   "dependencies": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/runbb/Hsoub-IO-API.js.git"
+    "url": "git+https://github.com/runbb/HsoubJS.git"
   },
   "keywords": [
     "Hsoub",
