--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hsoub",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Hsoub I/O API requests",
   "main": "hsoub.js",
   "dependencies": {
-    "jsdom": "^9.9.1"
+    "jsdom": "^9.9.1",
+    "request": "^2.79.0"
   },
   "devDependencies": {},
   "scripts": {
